src/test/deca/syntax/valid/created/assign_assign_plus.deca
{
	int a = 5;
	int b = 2;
	a = a + b;
}
