src/test/deca/syntax/invalid/created/faux10.deca
{
	int a = 5 + false;
}
